# MPC-for-Quadrotors

./: .envrc  .gitignore  ACADOS_nmpc_tracker_solver.json  controller.py  data.csv  draw_fig_from_csv.ipynb  pyproject.toml  quadrotor.py  run_sim.py  terminal_set.py  trajectory.py  utils.py
c_generated_code/: Makefile  acados_sim_solver_mav_nmpc_tracker_model.c  acados_sim_solver_mav_nmpc_tracker_model.h  acados_solver.pxd  acados_solver_mav_nmpc_tracker_model.c  acados_solver_mav_nmpc_tracker_model.h  main_mav_nmpc_tracker_model.c  main_sim_mav_nmpc_tracker_model.c
c_generated_code/mav_nmpc_tracker_model_model/: mav_nmpc_tracker_model_expl_ode_fun.c  mav_nmpc_tracker_model_expl_vde_adj.c  mav_nmpc_tracker_model_expl_vde_forw.c  mav_nmpc_tracker_model_model.h
