[project]
name = "mpc-for-quadrotors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "control>=0.10.1",
    "cvxpy>=1.6.5",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pyqt6>=6.9.0",
    "scipy>=1.15.2",
]
